--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -31,12 +31,13 @@ jobs:
       # Need these in the local env so that corso can read them
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
-      CORSO_BUCKET: ${{ secrets.CI_TESTS_S3_BUCKET }}
-      CORSO_LOG_DIR: testlog
-      CORSO_LOG_FILE: testlog/testlogging.log
+      AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
+      AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }}
       CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
       # re-used values
       # don't forget: return to Corso_Test_Sanity_
+      CORSO_LOG_DIR: testlog
+      CORSO_LOG_FILE: testlog/testlogging.log
       RESTORE_DEST_PFX: Corso_Test_Check_Sanity_
       TEST_RESULT: test_results
       TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
@@ -121,10 +122,13 @@ jobs:
         run: |
           set -euo pipefail
           prefix=$(date +"%Y-%m-%d-%T")
-          echo -e "\nRepo init test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nRepo init test\n" >> ${{ env.CORSO_LOG_FILE }}
           ./corso repo init s3 \
-            --no-stats --hide-progress --prefix $prefix \
-            --bucket  ${CORSO_BUCKET}  2>&1 | tee $TEST_RESULT/initrepo.txt
+            --no-stats \
+            --hide-progress \
+            --prefix $prefix \
+            --bucket ${{ secrets.CI_TESTS_S3_BUCKET }} \
+            2>&1 | tee $TEST_RESULT/initrepo.txt
 
           if ! grep -q 'Initialized a S3 repository within bucket' $TEST_RESULT/initrepo.txt
           then
@@ -137,10 +141,13 @@ jobs:
       - name: Repo connect test
         run: |
           set -euo pipefail
-          echo -e "\nRepo connect test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nRepo connect test\n" >> ${{ env.CORSO_LOG_FILE }}
           ./corso repo connect s3 \
-            --no-stats --hide-progress --prefix ${{ steps.repo-init.outputs.result }} \
-            --bucket  ${CORSO_BUCKET} 2>&1 | tee $TEST_RESULT/connect.txt
+            --no-stats \
+            --hide-progress \
+            --prefix ${{ steps.repo-init.outputs.result }} \
+            --bucket ${{ secrets.CI_TESTS_S3_BUCKET }} \
+            2>&1 | tee $TEST_RESULT/connect.txt
 
           if ! grep -q 'Connected to S3 bucket' $TEST_RESULT/connect.txt
           then
