--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,11 +180,12 @@ jobs:
           -failfast     \
           -p 1          \
           -timeout 15m  \
-          ./... 2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
+          ./... \
+          2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
 
       # Upload the original go test output as an artifact for later review.
       - name: Upload test log
-        if: always()
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: test-log
@@ -233,15 +234,16 @@ jobs:
           -failfast     \
           -p 1          \
           -timeout 15m  \
-          ./... 2>&1 | tee ./testlog/gotest-unit.log | gotestfmt -hide successful-tests
+          ./... \
+          2>&1 | tee ./testlog/gotest-unit.log | gotestfmt -hide successful-tests
 
       # Upload the original go test output as an artifact for later review.
       - name: Upload test log
-        if: always()
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: unit-test-log
-          path: .src/testlog/*
+          path: src/testlog/*
           if-no-files-found: error
           retention-days: 14
 
@@ -321,22 +323,23 @@ jobs:
           -json   \
           -v      \
           -timeout 15m  \
-          ./... 2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
+          ./... \
+          2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
 
       # Upload the original go test log as an artifact for later review.
       - name: Upload test log
-        if: always()
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: test-log
-          path: .src/testlog/*
+          path: src/testlog/*
           if-no-files-found: error
           retention-days: 14
 
       # Update check run called "Test-Suite-Fork"
       - uses: actions/github-script@v6
         id: update-check-run
-        if: always()
+        if: failure()
         env:
           number: ${{ github.event.client_payload.pull_request.number }}
           job: ${{ github.job }}
