--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,18 @@ jobs:
           ./... \
           2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
 
+      - name: pwd
+        if: always()
+        run: pwd
+
+      - name: ls
+        if: always()
+        run: ls ./ -l
+
+      - name: ls testlog
+        if: always()
+        run: ls ./testlog -l
+
       # Upload the original go test output as an artifact for later review.
       - name: Upload test log
         if: failure()
@@ -236,14 +248,18 @@ jobs:
           -timeout 15m  \
           ./... \
           2>&1 | tee ./testlog/gotest-unit.log | gotestfmt -hide successful-tests
-            
+
       - name: pwd
         if: always()
         run: pwd
 
       - name: ls
         if: always()
-        run: ls ./
+        run: ls ./ -l
+
+      - name: ls testlog
+        if: always()
+        run: ls ./testlog -l
 
       # Upload the original go test output as an artifact for later review.
       - name: Upload test log
@@ -333,14 +349,6 @@ jobs:
           -timeout 15m  \
           ./... \
           2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
-      
-      - name: pwd
-        if: always()
-        run: pwd
-
-      - name: ls
-        if: always()
-        run: ls ./
 
       # Upload the original go test log as an artifact for later review.
       - name: Upload test log
