--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -37,7 +37,7 @@ jobs:
       # re-used values
       # don't forget: return to Corso_Test_Sanity_
       CORSO_LOG_DIR: testlog
-      CORSO_LOG_FILE: ${{ github.workspace }}/src/testlog/testlogging.log
+      CORSO_LOG_FILE: ${{ github.workspace }}/src/testlog/run-sanity.log
       RESTORE_DEST_PFX: Corso_Test_Sanity_
       TEST_RESULT: test_results
       TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
