--- a/.github/workflows/load_test.yml
+++ b/.github/workflows/load_test.yml
@@ -55,7 +55,7 @@ jobs:
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           CORSO_LOAD_TESTS: true 
-          CORSO_LOG_FILE: ./src/test_results/testlogging.log
+          CORSO_LOG_FILE: ${{ github.workspace }}/test_results/run-load.log
           CORSO_M365_LOAD_TEST_USER_ID: ${{ secrets.CORSO_M365_LOAD_TEST_USER_ID }}
           CORSO_M365_LOAD_TEST_ORG_USERS: ${{ secrets.CORSO_M365_LOAD_TEST_ORG_USERS }}
           CORSO_PASSPHRASE: ${{ secrets.CORSO_PASSPHRASE }}
@@ -75,7 +75,7 @@ jobs:
           -trace=trace.out         \
           -outputdir=test_results  \
           ./pkg/repository/repository_load_test.go \
-          2>&1 | tee ./test_results/goloadtest.log | gotestfmt -hide successful-tests
+          2>&1 | tee ./test_results/gotest-load.log | gotestfmt -hide successful-tests
 
       # generate new entries to roll into the next load test
       # only runs if the test was successful
