--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,2 +1,26 @@
 dist/
 corso
+
+# Test binary, built with `go test -c`
+*.test
+test_results/
+testlog/
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# IDE
+.vscode
+*.swp
+
+# Standard configuration file names
+.corso_test.toml
+.corso.toml
+
+# Logging
+*.log
+
+# Build directories
+/bin
+/docker/bin
+/website/dist
