updating gitignore to catch log files (#3549)
Co-authored-by: aviator-app[bot] <48659329+aviator-app[bot]@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # Test binary, built with `go test -c`
 *.test
+test_results/
+testlog/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -21,12 +23,9 @@
 .corso.toml
 
 # Logging
-.corso.log
+*.log
 
 # Build directories
 /bin
 /docker/bin
 /website/dist
-
-*/test_results/**
-*/testlog/**
