--- a/.github/actions/publish-binary/action.yml
+++ b/.github/actions/publish-binary/action.yml
@@ -39,7 +39,7 @@ runs:
       uses: goreleaser/goreleaser-action@v4
       with:
         version: latest
-        args: release --rm-dist --timeout 500m --parallelism 1 ${{ env.grflags }}
+        args: release --clean --timeout 500m --parallelism 1 ${{ env.grflags }}
         workdir: src
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
